tests/golden/type_errors/match_guard_non_exhaustive.err
Type error at 3:13: non-exhaustive match: missing Result.Ok
  let label = match result {
              ^
